delete button for preguntas en auditoria + fixed overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -264,25 +264,43 @@ input[type=password]:not(.browser-default):focus:not([readonly]) + label{
 }
 
 .grid-main {
-  width: 100%;
-  grid-auto-columns: auto;
+  /* width: 100%; */
+  /* grid-auto-columns: auto; */
   /* background-color: blue; */
+  display: grid;
+  grid-gap: 3px;
+  grid-template-columns: repeat(2, 1fr);
 
 }
 
+
 .grid-component-left {
-  width:85%;
-  float: left;
+  /* width:85%; */
+  /* float: left; */
   display: inline-block;
+  /* grid-row: 1 / 5; */
+  grid-column: 1 / 5;
+  align-items: center;
+  /* background-color: #2471A3; */
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-left: 10px;
+  margin-left: 5px;
 }
 
 .grid-component-right {
-  width:15%;
-  float: right;
-  text-align: center;
-  padding: 5px;
+  /* width:15%;
+  float: right; */
+  /* text-align: center; */
+  /* padding: 5px; */
   background-color: #CB4335;
-  /* display: inline-block; */
+  display: inline-block;
+  /* grid-row: 6; */
+  grid-column: 6;
+  align-items: center;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
 ::-webkit-scrollbar {
@@ -306,6 +324,22 @@ input[type=password]:not(.browser-default):focus:not([readonly]) + label{
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #CB4335;
+  background: #30b4ac;
   
+}
+
+.extra-margin {
+  margin-top: 30px;
+}
+
+.ext-margin-boton {
+  margin-top: 5px;
+}
+
+.destroy-overflow {
+  overflow:scroll;
+}
+
+.hover-click {
+  cursor: pointer;
 }
